Implement lineup by id GET endpoint. Update openapi schema.
