# src/main/resources/openapi/openapi.yaml
@@ -22,6 +22,7 @@ tags:
   - name: Users
   - name: Players
   - name: Teams
+  - name: Rounds
   - name: Admin
 
 paths:
@@ -102,9 +103,9 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
 
-  ##################################################
-  # Users API
-  ##################################################
+          ##################################################
+          # Users API
+          ##################################################
 
   /api/v1/users:
     get:
@@ -126,6 +127,30 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
 
+  /api/v1/users/{userId}:
+    parameters:
+      - $ref: "#/components/parameters/UserIdPathParameter"
+    get:
+      operationId: getUserById
+      summary: Получение пользователя по ID
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+
   /api/v1/users/current:
     get:
       operationId: getCurrentUser
@@ -144,6 +169,142 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
 
+  /api/v1/users/current/players:
+    get:
+      operationId: getCurrentUserPlayers
+      summary: Получение игроков текущего пользователя
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Player"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+
+  /api/v1/users/current/players/{playerId}:
+    parameters:
+      - $ref: "#/components/parameters/PlayerIdPathParameter"
+    post:
+      operationId: purchasePlayerToCurrentUser
+      summary: Купить игрока текущему пользователю
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Player"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+    delete:
+      operationId: sellPlayerToCurrentUser
+      summary: Продать игрока текущего пользователя
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "204":
+          description: No content
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+
+
+  /api/v1/users/current/lineups/:
+    get:
+      operationId: getCurrentUserLineups
+      summary: Получение всех составов текущего пользователя
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Lineup"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+    post:
+      operationId: setLineupToCurrentUser
+      summary: Регистрация состава для текущего пользователя
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LineupRequest"
+      responses:
+        "201":
+          description: Created
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+
+  /api/v1/users/current/lineups/{lineupId}:
+    parameters:
+      - $ref: "#/components/parameters/LineupIdPathParameter"
+    get:
+      operationId: getCurrentUserLineupById
+      summary: Получение состава текущего пользователя по ID
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Lineup"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
 
   ##################################################
   # Players API
@@ -231,7 +392,7 @@ paths:
 
 
   ##################################################
-  # Users API
+  # Teams API
   ##################################################
 
   /api/v1/teams:
@@ -251,6 +412,32 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Team"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+
+
+
+  ##################################################
+  # Rounds API
+  ##################################################
+
+  /api/v1/rounds:
+    get:
+      operationId: getAllRounds
+      summary: Получение списка туров
+      security:
+        - bearerAuth: []
+      tags:
+        - Rounds
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Round"
         "401":
           $ref: "#/components/responses/Unauthorized"
 
@@ -278,6 +465,21 @@ paths:
     post:
       operationId: updateTeams
       summary: Обновление команд в соотвествии с внешним API
+      security:
+        - bearerAuth: []
+      tags:
+        - Admin
+      responses:
+        "201":
+          description: Created
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+  /api/v1/admin/rounds/update:
+    post:
+      operationId: updateRounds
+      summary: Обновление туров в соотвествии с внешним API
       security:
         - bearerAuth: []
       tags:
@@ -402,6 +604,62 @@ components:
         logo:
           type: string
 
+    Round:
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        status:
+          $ref: "#/components/schemas/RoundStatus"
+
+    RoundStatus:
+      type: string
+      enum:
+        - "UPCOMING"
+        - "OPEN"
+        - "CLOSED"
+        - "FINISHED"
+        - "PROCESSED"
+
+    Lineup:
+      properties:
+        id:
+          type: integer
+          format: int64
+        userId:
+          type: integer
+          format: int64
+        roundId:
+          type: integer
+          format: int64
+        lineup:
+          type: array
+          items:
+            type: object
+            properties:
+              number:
+                type: integer
+              player:
+                $ref: "#/components/schemas/Player"
+
+    LineupRequest:
+      properties:
+        roundId:
+          type: integer
+          format: int64
+        lineup:
+          type: array
+          items:
+            type: object
+            properties:
+              number:
+                type: integer
+              playerId:
+                type: integer
+                format: int64
+
     Error:
       properties:
         type:
@@ -520,6 +778,14 @@ components:
     TeamIdPathParameter:
       in: path
       name: teamId
+      required: true
+      schema:
+        type: integer
+        format: int64
+
+    LineupIdPathParameter:
+      in: path
+      name: lineupId
       required: true
       schema:
         type: integer
